@@ -5,6 +5,6 @@ import java.util.stream.Collectors;
 
 public class Copies3 {
     public List<String> copies3(List<String> strings) {
-        return strings.stream().map(n->n+n+n).collect(Collectors.toList());
+        return strings.stream().map(n->n+n+n).toList();
     }
 }
