@@ -5,6 +5,6 @@ import java.util.stream.Collectors;
 
 public class NoX {
     public List<String> noX(List<String> strings){
-        return strings.stream().map(n->n.replace("x","")).collect(Collectors.toList());
+        return strings.stream().map(n->n.replace("x","")).toList();
     }
 }
